--- a/descricaoKids/descricaoKidsFem.html
+++ b/descricaoKids/descricaoKidsFem.html
@@ -123,7 +123,7 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco"></h3>
                     <h3 class="numeracao" id="numeracao"></h3>
-                    <button class="btn-shopee"> Compre na </button>
+                    <button class="btn-shopee"> Compre na Shoppe</button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
