--- a/index.html
+++ b/index.html
@@ -426,147 +426,130 @@
                     <div class="meiasMaisVedidas">
                         <div class="carrossel-container">
                             <div class="todasAsMeiasBaby-CompreJunto2">
-                                <div class="Quadrado-da-meia-Color-Baby" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"> <img src="img-baby/MeiaRosa-Feminina.png" alt="">
-                                    </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Meia Baby Color’s Feminina</h3>
-                                        <h3 class="numeracao"> 0 á 6 meses</h3>
-                                        <div class="coresMeiaBabyColor">
-                                            <div class="RosaClaro"></div>
-                                            <div class="Lilas"></div>
-                                            <div class="VerdeAgua"></div>
-                                            <div class="RosaChoque"></div>
-                                            <div class="Branco"></div>
+
+                                <div class="Quadrado-da-meia-vaquinha-cano-longo" id="div-meia">
+                                    <div class="container2"> <img src="img-feminino/MeiaCanoLongoCasual-Vaquinha.png" alt=""></div>
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo"> Casual Cano Longo Feminina - Malhada</h3>
+                                        <h3 class="numeracao"> 34 á 38</h3>
+                                        <div class="cor-da-meia-vaquinha">
+                                            <div class="vaquinha"><img src="img-feminino/CorDaMeiaCanoLongo-Vaquinha.png" alt=""></div>
                                         </div>
                                     </div>
                                     <div class="preco-informacoes">
-                                        <h3 class="preco">R$ 3,65 </h3>
+                                        <h3 class="preco">R$4,80</h3>
                                         <h3 class="texto-a-vista">Á Vista</h3>
                                         <button class="botao-euQuero">Eu Quero!</button>
                                     </div>
                                 </div>
 
-                                <div class="Quadrado-da-Meia-Desenhada-Baby-um" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"><img
-                                            src="img-baby/MeiaDesenhadaAzulEscuro-Feminina.png" alt="">
+                                <div class="Quadrado-da-meia-esportiva-lisa" id="div-meia">
+                                    <div class="container2"> <img src="img-masculino/masculinaEsportivaBrancaLisa.png" alt="Meia Masculina Esportiva Lisa">
                                     </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Meia Baby Desenhada Feminina</h3>
-                                        <h3 class="numeracao"> 6 á 12 meses</h3>
-                                        <div class="coresMeiaDesenhada">
-                                            <div class="AzulEscuro"></div>
-
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Masculina Esportiva Lisa</h3>
+                                        <h3 class="numeracao">39 á 43</h3>
+                                        <div class="cores-branca-preta-cinza">
+                                            <div class="brancaLisa"></div>
+                                            <div class="pretaLisa"></div>
+                                            <div class="cinzaLisa"></div>
                                         </div>
                                     </div>
                                     <div class="preco-informacoes">
-                                        <h3 class="preco">R$: 3,80</h3>
+                                        <h3 class="preco">R$ 6,00</h3>
                                         <h3 class="texto-a-vista">Á Vista</h3>
                                         <button class="botao-euQuero">Eu Quero!</button>
                                     </div>
                                 </div>
 
-                                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"> <img
-                                            src="img-baby/MeiaBrancaSapatilha-Masculina.png" alt="">
+                                <div class="Quadrado-da-meia-malhaFem" id="div-meia">
+                                    <div class="container2" id="containerkit"> <img src="img-baby/malhaVerdeFem.png" alt="Meia">
                                     </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Cano Curto - Lisa</h3>
-                                        <h3 class="numeracao"> 6 á 12 meses</h3>
-                                        <div class="coresSapatilhaBaby">
-                                            <div class="BrancoSapatilha"></div>
-                                            <div class="VermelhoSapatilha"></div>
-                                            <div class="AzulEscuroSapatilha"></div>
-                                            <div class="AzulClaroSapatilha"></div>
-                                            <div class="VerdeAguaSapatilha"></div>
-                                        </div>
-                                    </div>
-                                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
-                                        <h3 class="preco">R$ 3,40 </h3>
-                                        <h3 class="texto-a-vista">Á Vista</h3>
-                                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu
-                                            Quero!</button>
-                                    </div>
-                                </div>
-
-                                <div class="Quadrado-da-meia-Color-Baby" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"> <img src="img-baby/MeiaRosa-Feminina.png" alt="">
-                                    </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Meia Baby Color’s Feminina</h3>
-                                        <h3 class="numeracao"> 0 á 6 meses</h3>
-                                        <div class="coresMeiaBabyColor">
-                                            <div class="RosaClaro"></div>
-                                            <div class="Lilas"></div>
-                                            <div class="VerdeAgua"></div>
-                                            <div class="RosaChoque"></div>
-                                            <div class="Branco"></div>
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Baby Malha Persa Feminina</h3>
+                                        <h3 class="numeracao">0 á 6 meses</h3>
+                                        <div class="cores-verde-amarela-malha">
+                                            <div class="verdeMFem"></div>
+                                            <div class="brancaMFem"></div>
+                                            <div class="rosaMFem"></div>
+                                            <div class="lilasMFem"></div>
+                                            <div class="amareloMFem"></div>
                                         </div>
                                     </div>
                                     <div class="preco-informacoes">
-                                        <h3 class="preco">R$ 3,65 </h3>
+                                        <h3 class="preco">R$ 3,40</h3>
                                         <h3 class="texto-a-vista">Á Vista</h3>
                                         <button class="botao-euQuero">Eu Quero!</button>
                                     </div>
                                 </div>
 
-                                <div class="Quadrado-da-Meia-Desenhada-Baby-um" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"><img
-                                            src="img-baby/MeiaDesenhadaAzulEscuro-Feminina.png" alt="">
+                                <div class="Quadrado-da-meia-chevron" id="div-meia">
+                                    <div class="container2" id="containerkit"> <img src="img-baby/chevronRosa.png" alt="Meia">
                                     </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Meia Baby Desenhada Feminina</h3>
-                                        <h3 class="numeracao"> 6 á 12 meses</h3>
-                                        <div class="coresMeiaDesenhada">
-                                            <div class="AzulEscuro"></div>
-
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Baby Desenhada Chevron Feminina</h3>
+                                        <h3 class="numeracao">6 á 12 meses</h3>
+                                        <div class="cores-chevron">
+                                            <div class="rosaCh"></div>
+                                            <div class="verdeCh"></div>
                                         </div>
                                     </div>
                                     <div class="preco-informacoes">
-                                        <h3 class="preco">R$: 3,80</h3>
+                                        <h3 class="preco">R$ 3,80</h3>
                                         <h3 class="texto-a-vista">Á Vista</h3>
                                         <button class="botao-euQuero">Eu Quero!</button>
                                     </div>
                                 </div>
 
-                                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"> <img
-                                            src="img-baby/MeiaBrancaSapatilha-Masculina.png" alt="">
+                                <div class="Quadrado-da-meia-rendada" id="div-meia">
+                                    <div class="container2" id="containerkit"> <img src="img-baby/rendadaDourada.png" alt="Meia">
                                     </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Cano Curto - Lisa</h3>
-                                        <h3 class="numeracao"> 6 á 12 meses</h3>
-                                        <div class="coresSapatilhaBaby">
-                                            <div class="BrancoSapatilha"></div>
-                                            <div class="VermelhoSapatilha"></div>
-                                            <div class="AzulEscuroSapatilha"></div>
-                                            <div class="AzulClaroSapatilha"></div>
-                                            <div class="VerdeAguaSapatilha"></div>
-                                        </div>
-                                    </div>
-                                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
-                                        <h3 class="preco">R$ 3,40 </h3>
-                                        <h3 class="texto-a-vista">Á Vista</h3>
-                                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu
-                                            Quero!</button>
-                                    </div>
-                                </div>
-                                <div class="Quadrado-da-meia-Color-Baby" id="divMeiasBaby">
-                                    <div class="Imagem-CompreJunto"> <img src="img-baby/MeiaRosa-Feminina.png" alt="">
-                                    </div>
-                                    <div class="informacoesMeiaBaby">
-                                        <h3 class="MeiaBabySubtitulo"> Meia Baby Color’s Feminina</h3>
-                                        <h3 class="numeracao"> 0 á 6 meses</h3>
-                                        <div class="coresMeiaBabyColor">
-                                            <div class="RosaClaro"></div>
-                                            <div class="Lilas"></div>
-                                            <div class="VerdeAgua"></div>
-                                            <div class="RosaChoque"></div>
-                                            <div class="Branco"></div>
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Baby Desenhada Rendada Feminina</h3>
+                                        <h3 class="numeracao">0 á 6 meses</h3>
+                                        <div class="cores-rendada">
+                                            <div class="dourada"></div>
+                                            <div class="rosa"></div>
                                         </div>
                                     </div>
                                     <div class="preco-informacoes">
-                                        <h3 class="preco">R$ 3,65 </h3>
+                                        <h3 class="preco">R$ 3,70</h3>
+                                        <h3 class="texto-a-vista">Á Vista</h3>
+                                        <button class="botao-euQuero">Eu Quero!</button>
+                                    </div>
+                                </div>
+
+                                <div class="Quadrado-da-meia-esportiva-aero" id="div-meia">
+                                    <div class="container2"> <img src="img-masculino/masculinaEsportivaBrancaAero.png" alt="Meia Esportiva Aero Branca Masculina">
+                                    </div>
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
+                                        <h3 class="numeracao">39 á 43</h3>
+                                        <div class="cores-branca-preta-cinza05">
+                                            <div class="brancaAero"></div>
+                                            <div class="pretaAero"></div>
+                                            <div class="cinzaAero"></div>
+                                        </div>
+                                    </div>
+                                    <div class="preco-informacoes">
+                                        <h3 class="preco">R$ 6,00</h3>
+                                        <h3 class="texto-a-vista">Á Vista</h3>
+                                        <button class="botao-euQuero">Eu Quero!</button>
+                                    </div>
+                                </div>
+
+                                <div class="Quadrado-da-meia-faixa-amarela" id="div-meia">
+                                    <div class="container2"> <img src="img-masculino/masculinaProFaixaAmarela01.png" alt="Meia Pró Faixa Amarela Masculina">
+                                    </div>
+                                    <div class="informacoes-meia">
+                                        <h3 class="Subtitulo">Meia Pró Faixa Amarela Masculina</h3>
+                                        <h3 class="numeracao">39 á 44</h3>
+                                        <div class="cores-amarela-pro">
+                                            <div class="amarelaPro"></div>
+                                        </div>
+                                    </div>
+                                    <div class="preco-informacoes">
+                                        <h3 class="preco">R$ 11,20</h3>
                                         <h3 class="texto-a-vista">Á Vista</h3>
                                         <button class="botao-euQuero">Eu Quero!</button>
                                     </div>
