--- a/canoCurto-masculino.html
+++ b/canoCurto-masculino.html
@@ -374,19 +374,24 @@
 
             },
             'Quadrado-da-meia-Kit-Cinza-Azul-Branco': {
-                kit02:'img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png'
+                kit02: 'img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png'
             },
             'Quadrado-da-meia-CanoCurto-Branca': {
-
+                CorBrancaMeia: 'img-masculino/CanoCurtoBranca.png',
+                CorPretaMeia: 'img-masculino/CanoCurtoPreta.png',
+                CorCinzaMeia: 'img-masculino/CanoCurtoCinza.png'
             },
             'Quadrado-da-meia-KitPreto': {
-
+                CorBrancaKit: 'img-masculino/CanoCurto-KitBranco.png',
+                CorPretaKit: 'img-masculino/CanoCurto-KitPreto.png',
+                CorCinzaKit: 'img-masculino/CanoCurto-KitCinza.png'
             },
             'Quadrado-da-meia-kit-preto-branco-cinza': {
-
+                kit03: 'img-masculino/CanoCurto-Kit3Branco-Cinza-Preto.png'
             },
-            'Quadrado-da-meia-CanoCurto-CinzaAzulMarinho':{
-                
+            'Quadrado-da-meia-CanoCurto-CinzaAzulMarinho': {
+                Vermelho: 'img-masculino/CanoCurtoCinza-FaixaAzulMarinho.png',
+                Laranja: 'img-masculino/CanoCurtoBranca-FaixaAzulMarinho.png'
             }
         };
 
@@ -395,7 +400,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.Corbranca, .AzulMarinho, .CorCinza, .CorPreta, .Vermelho, .Laranja, .Kit01, .kit02, kit03 ');
+            const cores = quadrado.querySelectorAll('.Corbranca, .AzulMarinho, .CorCinza, .CorPreta, .Vermelho, .Laranja, .Kit01, .kit02, kit03,  .CorBrancaMeia, .CorPretaMeia, .CorCinzaMeia, .kit03, .CorBrancaKit, .CorPretaKit, .CorCinzaKit');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -436,7 +441,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoMasculina/descricaoMascEsportiva.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoMasculina/descricaoMascCanoCurto.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
@@ -445,10 +450,14 @@
 
         });
 
-        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(cor => {
+       
+
+
+
+        document.querySelectorAll('.cores-preta-cinza div, .cores-Vermelho-Laranja div, .cores-branca-preta-cinzaMeias div, .Kit-BrancoAzulEScuro-Chumbo-BrancoCInza div, .cores-branca-preta-cinza-Kit div, .cores-preto-branco-cinza-kit3pares div, .cores-Branca-AzulEscuro div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(c => {
+                document.querySelectorAll('.cores-preta-cinza div, .cores-Vermelho-Laranja div, .cores-branca-preta-cinzaMeias div, .Kit-BrancoAzulEScuro-Chumbo-BrancoCInza div, .cores-branca-preta-cinza-Kit div, .cores-preto-branco-cinza-kit3pares div, .cores-Branca-AzulEscuro div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
@@ -457,8 +466,6 @@
                 console.log('Classe "selected" adicionada a:', this); // Verifique se o elemento correto está sendo selecionado
             });
         });
-
-
 
 
 
