--- a/juvenilMasculina.html
+++ b/juvenilMasculina.html
@@ -174,123 +174,121 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-polo" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaPolo.png"
+                    <div class="container"> <img src="img-juvenil/faixa-grafite.png"
                             alt="Meia Esportiva Polo Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Polo Masculina</h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza04">
-                            <div class="pretaPolo"></div>
-                            <div class="brancaPolo"></div>
-                            <div class="cinzaPolo"></div>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Faixa Grafite Juvenil</h3>
+                        <h3 class="numeracao">34 á 38</h3>
+                        <div class="cores-marinho-grafite">
+                            <div class="faixaGrafite"></div>
+                            <div class="faixaMarinho"></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00</h3>
+                        <h3 class="preco">R$ 4,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-aero" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaAero.png"
+                    <div class="container"> <img src="img-juvenil/marinho-vermelha.png"
                             alt="Meia Esportiva Aero Branca Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza05">
-                            <div class="brancaAero"></div>
-                            <div class="pretaAero"></div>
-                            <div class="cinzaAero"></div>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada - Marinho e Vermelho Juvenil</h3>
+                        <h3 class="numeracao">34 á 38</h3>
+                        <div class="cores-vermelho-verde">
+                            <div class="vermelhoDes"></div>
+                            <div class="verdeDes"></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00</h3>
+                        <h3 class="preco">R$ 4,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-esportiva-kit01" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaKit01.png"
+                <div class="Quadrado-da-meia-esportiva-cinza-laranja" id="div-meia">
+                    <div class="container"> <img src="img-juvenil/cinza-laranja.png"
                             alt="Meia Esportiva Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº1</h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Cinza e Laranja Juvenil</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza06">
-                            <div class="cinzaKit01"></div>
-                            <div class="brancaKit01"></div>
-                            <div class="pretaKit01"></div>
+                        <div class="cores-cinza-laranja">
+                            <div class="cinzaLar"></div>
+                            <div class="royalVer"></div>
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="preco">R$ 4,80</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-cano-curto" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png"
+                    <div class="container"> <img src="img-juvenil/lisa-cinza.png"
                             alt="Meia Esportiva Cano Curto Lisa Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Lisa Masculina</h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza07">
-                            <div class="brancaCurto"></div>
-                            <div class="pretaCurto"></div>
-                            <div class="cinzaCurto"></div>
+                        <h3 class="Subtitulo">Meia Cano Curto - Lisa Juvenil</h3>
+                        <h3 class="numeracao">34 á 38</h3>
+                        <div class="cores-brancaLisa-pretaLisa-cinzaLisa">
+                            <div class="brancaLisa"></div>
+                            <div class="pretaLisa"></div>
+                            <div class="cinzaLisa"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00</h3>
+                        <h3 class="preco">R$ 4,70</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-esportiva-kit02" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaKit02.png"
+                <div class="Quadrado-da-meia-esportiva-kit01" id="div-meia">
+                    <div class="container"> <img src="img-juvenil/kit-preta.png"
                             alt="Meia Esportiva Masculina - Kit Nº2">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº2</h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza08">
-                            <div class="pretaKit02"></div>
-                            <div class="brancaKit02"></div>
-                            <div class="cinzaKit02"></div>
+                        <h3 class="Subtitulo">Meia Cano Curto Lisa Juvenil Preta - Kit 3 pares</h3>
+                        <h3 class="numeracao">34 á 38</h3>
+                        <div class="cores-branca-preta-cinzakit">
+                            <div class="pretaKit01"></div>
+                            <div class="brancaKit01"></div>
+                            <div class="cinzaKit01"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="preco">R$ 14,10</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-cano-curto-kit" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png"
+                    <div class="container"> <img src="img-juvenil/kit-diversa.png"
                             alt="Meia Esportiva Cano Curto Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Masculina - Kit Nº1</h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza09">
-                            <div class="kitTresCores">
+                        <h3 class="Subtitulo">Meia Cano Curto Lisa Juvenil Diversa - Kit 3 pares</h3>
+                        <h3 class="numeracao">34 á 38</h3>
+                        <div class="cores-branca-preta-cinzaDiversa">
+
+                            <div class="kitDiversa">
                                 <p>1</p>
                             </div>
-                            <div class="brancaCurtoKit"></div>
-                            <div class="pretaCurtoKit"></div>
-                            <div class="cinzaCurtoKit"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="preco">R$ 14,10</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -388,8 +386,32 @@
             },
             'Quadrado-da-meia-esportiva-s': {
                 marinhoFut: 'img-juvenil/futebol-marinho.png',
-                cinzaMotors: 'img-juvenil/futebol-preta.png',
-            }
+                grafiteFut: 'img-juvenil/futebol-grafite.png',
+            },
+            'Quadrado-da-meia-esportiva-polo': {
+                faixaGrafite: 'img-juvenil/faixa-grafite.png',
+                faixaMarinho: 'img-juvenil/faixa-branca.png',
+            },
+            'Quadrado-da-meia-esportiva-aero': {
+                vermelhoDes: 'img-juvenil/marinho-vermelha.png',
+                verdeDes: 'img-juvenil/marinho-verde.png'
+            },
+            'Quadrado-da-meia-esportiva-cinza-laranja': {
+                cinzaLar: 'img-juvenil/cinza-laranja.png',
+                royalVer: 'img-juvenil/royal-vermelho.png',
+            },
+            'Quadrado-da-meia-esportiva-cano-curto': {
+                brancaLisa: 'img-juvenil/lisa-branca.png',
+                pretaLisa: 'img-juvenil/lisa-preta.png',
+                cinzaLisa: 'img-juvenil/lisa-cinza.png',
+            },
+            'Quadrado-da-meia-esportiva-kit01': {
+                brancaKit01: 'img-juvenil/kit-branca.png',
+                pretaKit01: 'img-juvenil/kit-preta.png',
+                cinzaKit01: 'img-juvenil/kit-cinza.png',
+            },
+           
+
 
         };
 
@@ -398,7 +420,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.juvenilMarrom, .juvenilPreta, .marinhoMotors, .cinzaMotors');
+            const cores = quadrado.querySelectorAll('.juvenilMarrom, .juvenilPreta, .marinhoMotors, .cinzaMotors, .marinhoFut, .grafiteFut, .faixaMarinho , .faixaGrafite, .vermelhoDes, .verdeDes, .cinzaLar, .royalVer, .brancaLisa, .cinzaLisa, .pretaLisa, .pretaKit01, .cinzaKit01, .brancaKit01, .kitDiversa ');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -448,10 +470,10 @@
 
         });
 
-        document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div').forEach(cor => {
+        document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, .cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div').forEach(c => {
+                document.querySelectorAll('.cores-preta-marrom div, .cores-cinza-marinho div, .cores-grafite-marinho div, cores-marinho-grafite div, .cores-vermelho-verde div, .cores-cinza-laranja div, .cores-brancaLisa-pretaLisa-cinzaLisa div, .cores-branca-preta-cinzakit div, .cores-branca-preta-cinzaDiversa div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
